--- a/.github/workflows/Python-package.yaml
+++ b/.github/workflows/Python-package.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
@@ -29,7 +29,7 @@ jobs:
         poetry-version: 1.1.4
     - name: Install dependencies
       run: |
-        poetry install -E cli
+        poetry install -E full
     - name: Run black
       run: |
         poetry run python -m black -t py38 . --check
