--- a/.github/workflows/Python-package.yaml
+++ b/.github/workflows/Python-package.yaml
@@ -26,10 +26,10 @@ jobs:
     - name: Install poetry
       uses: abatilo/actions-poetry@v2.0.0
       with:
-        poetry-version: 1.1.4
+        poetry-version: 1.1.5
     - name: Install dependencies
       run: |
-        poetry install -E full
+        poetry lock && poetry install -E full
     - name: Run black
       run: |
         poetry run python -m black -t py38 . --check
