--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dask = { extras = ["bag"], version = "^2021.3.0" }
 gcsfs = { version = "0.7.2", optional = true }
 fastparquet = { version = "^0.5.0", optional = true }
 pymongo = { version = "^3.11.3", optional = true }
+click = { version = "^7.1.2", optional = true }
+colorama = { version = "^0.4.4", optional = true }
+click-help-colors = { version = "^0.8", optional = true }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -21,6 +24,10 @@ coverage = "^5.5"
 
 [tool.poetry.extras]
 full = ["gcsfs", "fastparquet", "pymongo"]
+cli = ["gcsfs", "fastparquet", "pymongo", "click", "colorama", "click-help-colors"]
+
+[tool.poetry.scripts]
+daskonverter = "daskonverter.__main__:cli"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
